--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
         <p>Pieces may be clicked on to select and show what legal moves are available for that piece. The legal moves will be highlighted in green, and to move the piece there, the tile is to be clicked.</p>
         <p>Kings are denoted with a smaller yellow circle within the larger piece.</p>
         <p>The turn is indicated by the border colour of the game window. Red always goes first.</p>
+        <p>Once the opponent is unable to make a legal move or has lost all of their pieces, they lose the game.</p>
+        <p>In the scenario that the board only has a single king and a single pawn (of opposing colours), the game would continue indefinitely, so that case is considered a draw.</p>
     </body>
 </html>
