--- a/game.html
+++ b/game.html
@@ -8,7 +8,12 @@
         <h1>Dama</h1>
         <h3>Zasharan2</h3>
         <h3><a href = "index.html">Explanation</a></h3>
+
         <canvas id = "gameCanvas", width = "512px", height = "512px"></canvas>
+
+        <audio id = "soundSelect", src="sounds/select.wav"></audio>
+        <audio id = "soundMove", src="sounds/move.wav"></audio>
+
         <script src = "index.js"></script>
     </body>
 </html>
